--- a/readme
+++ b/readme
@@ -1,2 +1,4 @@
-A Job Portal using php and mysql
+A CompleteJob Portal with employer area as well as job-seeker area. Employer can post and manage infinite number of jobs whereas
+job seeker can search jobs according to his/her skills .
+The Job Portal is completely validated and secure
 for query asadzaidi625@gmail.com
